--- a/arrow_tokenize/pyproject.toml
+++ b/arrow_tokenize/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: CPython",
     "Operating System :: MacOS",
     "Operating System :: POSIX :: Linux",
-    "License :: Other/Proprietary License",
+    "License :: OSI Approved :: Apache Software License",
 ]
 license = "Apache-2.0"
 license-files = ["LICENSE"]
