--- a/arrow_tokenize/pyproject.toml
+++ b/arrow_tokenize/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
     { name = "DatologyAI Team" },
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.14"
 classifiers = [
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
